--- a/Mini_projet/templates/home/includes/page_navigation.html
+++ b/Mini_projet/templates/home/includes/page_navigation.html
@@ -3,9 +3,9 @@
     <div class="container mx-auto px-4 md:px-8">
         <div class="py-4">
             <nav class="flex space-x-2 text-sm">
-                <a href="{% url 'home' %}" class="text-gray-500 hover:text-[#000080] transition-colors duration-200">Home</a>
+                <a href="{% url 'home' %}" class="text-gray-500 hover:text-[#000080] transition-colors duration-200">Accueil</a>
                 <span class="text-gray-300">/</span>
-                <span class="text-[#000080] font-medium">{{ page_title|default:"About & Contact" }}</span>
+                <span class="text-[#000080] font-medium">{{ page_title|default:"À propos & Contact" }}</span>
             </nav>
         </div>
     </div>
